Apply updates to limit message in filters
